[package]
name = "net_util"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"
build = 'build.rs'

[features]
guest-to-host-net-loopback = []
slirp = []
slirp-debug = ["slirp"]
slirp-ring-capture = ["slirp"]

[dependencies]
base = { path = "../base" }
cfg-if = "1.0.0"
cros_async = { path = "../cros_async" }
libc = "*"
zerocopy = "*"

net_sys = { path = "../net_sys" }
remain = "*"
serde = { version = "1", features = [ "derive" ] }
smallvec = "*"
thiserror = "*"
virtio_sys = { path = "../virtio_sys" }

[target.'cfg(windows)'.dependencies]
metrics = { path = "../metrics" }
winapi = { version = "*", features = ["everything", "std", "impl-default"] }

[build-dependencies]
anyhow = "*"
prebuilts = { path = "../prebuilts" }

[dev-dependencies]
serde_json = "*"
