[package]
name = "vm_control"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[features]
balloon = []
gdb = []
gpu = []

[dependencies]
anyhow = "*"
balloon_control = { path = "../common/balloon_control" }
base = { path = "../base" }
cfg-if = "*"
data_model = { path = "../common/data_model" }
hypervisor = { path = "../hypervisor" }
libc = "*"
remain = "*"
resources = { path = "../resources" }
rutabaga_gfx = { path = "../rutabaga_gfx"}
serde = { version = "1", features = [ "derive" ] }
serde_json = "*"
serde_keyvalue = { path = "../serde_keyvalue", features = ["argh_derive"] }
sync = { path = "../common/sync" }
thiserror = "*"
vm_memory = { path = "../vm_memory" }

[target.'cfg(windows)'.dependencies]
winapi = "*"
